# storyframe-cli

./: .gitignore  README.md  README.vi.md  pyproject.toml
docs/: challenges.md
storyframe_cli/: __init__.py  cli.py  extract_story_transcript_frames.py
storyframe_cli/local/: __init__.py  asr.py  bootstrap.py  captions.py  engine.py  media.py  models.py  ocr.py  page_detection.py  selector.py  subtitles.py
storyframe_cli/local_v2/: __init__.py  asr.py  bootstrap.py  engine.py  media.py  ocr.py  ocr_filter.py  page_detection.py  selector.py  text.py
tests/: test_local_selector.py  test_local_v2_selector.py  test_storyframe_algorithm.py
